# mex-metawear

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: FindBluez.cmake
examples/: acc_logging.m  logging.m  logging_2.m
platform/: CMakeLists.txt
platform/linux/src/: MetawearWrapper.cpp
platform/windows/include/: MetawearWrapper.h
platform/windows/src/: MetawearWrapper.cpp
